--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-
-
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
+  
 }
 
 :root {
@@ -18,11 +15,18 @@
   --backEnd: #00C86F;
 }
 
-/* html,
+html,
 body {
-  
-} */
+  margin: 0;
+  padding: 0;
+}
 
 a {
   color: inherit;
 } 
+
+#root{
+  min-height:calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
+}
