--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;  
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -15,18 +17,17 @@
   --grayDark: #141414;
 }
 
-html,
+/* html,
 body {
-  margin: 0;
-  padding: 0;
-}
+  
+} */
 
 a {
   color: inherit;
 } 
 
 #root{
-  min-height:calc(100vh - var(--bodyPaddingTop));
+  min-height:100vh;
   display: flex;
   flex-direction: column;
 }
