--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,9 @@ a {
   display: flex;
   flex-direction: column;
 }
+
+/* Auxiliares
+------------------------------------------------------ */
+.text-center{text-align: center;}
+.text-left{text-align: left;}
+.text-right{text-align: right;}
